formatting for stan posterior predictions

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 temp/*
 log/*
 
+# Compiled Stan Models ---------------------------------------------------------
+stan/*.rds
+
 # R Files ----------------------------------------------------------------------
 # History files
 .Rhistory
